--- a/004 Operar un Servidor Node/4.4 Instalar express y express generator/expressbase/views/index.pug
+++ b/004 Operar un Servidor Node/4.4 Instalar express y express generator/expressbase/views/index.pug
@@ -5,3 +5,9 @@ block content
   p Welcome to #{title}
   p
     a(href="https://apptics.com.ec") AppTics
+  if datos
+    h1 titulo
+    p #{datos.titulo}
+
+    h1 autor
+    p #{datos.autor}
